--- a/style.css
+++ b/style.css
@@ -67,3 +67,27 @@ iframe{
     height: 96%;
     background-color: #fff;
 }
+
+@media screen and (max-width: 450px) {
+
+    body{
+        overflow: hidden;
+    }
+
+    .container{
+        width: 100%;
+        height: 100vh;
+        padding: 5px;
+        display: flex;
+        flex-direction: column; 
+        gap: 15px;
+    }
+
+    .left{
+        flex-basis: 65%;
+    }
+
+    .right{
+        flex-basis: 30%;
+    }
+}
