--- a/style.css
+++ b/style.css
@@ -70,17 +70,12 @@ iframe{
 
 @media screen and (max-width: 450px) {
 
-    body{
-        overflow: hidden;
-    }
-
     .container{
         width: 100%;
         height: 100vh;
         padding: 5px;
         display: flex;
         flex-direction: column; 
-        gap: 15px;
     }
 
     .left{
@@ -89,5 +84,7 @@ iframe{
 
     .right{
         flex-basis: 30%;
+        position: relative;
+        top: 15px;
     }
 }
