--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body{
-    background-color: #656464;
+    background-color: #99A98F;
     color: #fff;
 }
 
@@ -18,21 +18,68 @@ body{
     width: 100%;
     height: 100vh;
     padding: 20px;
-    display: flex; 
+    display: flex;
+    flex-direction: column; 
+}
+
+.left{
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+    margin-top:-1.5%;
+}
+
+.code{
+    width: 100%;
+    border-radius: 20px;
+}
+
+#html-transition, #css-transition, #js-transition,#output-transition{
+    opacity: 0;
+    transition: opacity 0.5s ease-in;
+}
+
+#html-transition.active{
+    opacity: 1;
+}
+
+#css-transition.active{
+    opacity: 1;
+}
+
+#js-transition.active{
+    opacity: 1;
+}
+
+#output-transition.active{
+    opacity: 1;
 }
 
 .left, .right{
+    
     flex-basis: 50%;
     padding: 10px;
 }
 
 textarea{
     width: 100%;
-    height: 28%;
-    background-color: #1f1f1f;
+    height: 100%;
+    background-color: #454545;
     color: #fff;
     padding: 10px 20px;
     font-size: 14px;
+}
+
+#html{
+    color: rgb(251, 160, 80);
+}
+
+#css{
+    color: rgb(127, 203, 249)
+}
+
+#js{
+    color: rgb(248, 229, 60);
 }
 
 label i{
@@ -57,6 +104,7 @@ label{
     align-items: center;
     background-color: #000;
     height: 30px;
+    border-radius: 5px 5px 0 0;
 }
 
 .output i{
@@ -68,23 +116,29 @@ iframe{
     background-color: #fff;
 }
 
+/* media query section  */
+
 @media screen and (max-width: 450px) {
 
     .container{
-        width: 100%;
-        height: 100vh;
-        padding: 5px;
         display: flex;
-        flex-direction: column; 
+        flex-direction: column;
+        padding: 10px;
     }
 
     .left{
-        flex-basis: 65%;
+        display: flex;
+        flex-direction: column;
+        gap: 40px; 
     }
 
+    .left{
+        flex-basis: 70%;
+    }
     .right{
         flex-basis: 30%;
-        position: relative;
-        top: 15px;
+    }
+    .code{
+        height: 50%;
     }
 }
